27_matrix_input/grade.txt
Grading at Sat Jan 12 00:48:39 UTC 2019
Attempting to compile rotateMatrix.c
rotateMatrix.c:17:16: error: expected ‘)’ before ‘char’
 int main(argc, char** argv){
                ^
The code did not compile!

Overall Grade: F
